--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,21 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiosmtplib>=5.0.0",
+    "alembic>=1.17.1",
+    "asyncpg>=0.30.0",
+    "email-validator>=2.3.0",
     "fastapi>=0.121.0",
-    "uvicorn>=0.38.0",
+    "httpx>=0.28.1",
+    "passlib[bcrypt]>=1.7.4",
+    "pydantic>=2.12.4",
+    "pydantic-settings>=2.11.0",
+    "python-dotenv>=1.2.1",
+    "python-jose[cryptography]>=3.5.0",
+    "python-multipart>=0.0.20",
+    "python-telegram-bot>=22.5",
+    "rich>=14.2.0",
+    "sqlalchemy[asyncio]>=2.0.0",
+    "stripe>=13.2.0",
+    "uvicorn[standard]>=0.38.0",
 ]
