feat(admin): add OAuth2 authentication and CRUD operations
Implement complete admin authentication system with:
- OAuth2 password flow with JWT tokens
- Bcrypt password hashing
- First admin auto-seeded from environment variables
- Full CRUD operations (create, read, update, delete)
- All endpoints protected with OAuth2PasswordBearer authentication

Includes:
- Admin model with email, hashed_password, first_name, last_name
- AdminService with authenticate, create, get, update, delete methods
- 8 protected endpoints: login, register, list, get by ID/email, update, delete
- Custom exceptions for admin operations
- Pydantic schemas for request/response validation
- OpenSpec proposal documentation

--- a/.env.example
+++ b/.env.example
@@ -1,84 +1,37 @@
-# Environment variables for PC Club backend
-APP_HOST=0.0.0.0
-APP_PORT=8000
-LOG_LEVEL=INFO
-CORS_ALLOW_ORIGINS=*
+# Application
+APP_NAME=HarmoniAPI
+APP_VERSION=0.1.0
+DEBUG=false
 
 # Database
-DATABASE_URL=postgresql+asyncpg://postgres:super_strong_password_123@postgres:5432/postgres
+# For local PostgreSQL: postgresql+asyncpg://postgres:postgres@localhost:5432/harmoni
+# For remote: postgresql+asyncpg://user:password@host:port/database
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/harmoni
 
-# Finik acquiring service
-FINIK_API_URL=https://api.acquiring.averspay.kg
-FINIK_API_KEY=your_api_key_here
-FINIK_ACCOUNT_ID=your_account_id_here
-FINIK_PRIVATE_KEY_PATH=private_key.pem
-FINIK_PUBLIC_KEY_PATH=public_key.pem
-FINIK_WEBHOOK_URL=https://your-backend.com/api/v1/webhooks/finik/payment
-FINIK_MERCHANT_CATEGORY_CODE=0742
-FINIK_QR_NAME_EN=PC Club Payment
-REFERRAL_ACTIVATION_THRESHOLD_SOM=100
+# Security
+SECRET_KEY=your-secret-key-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# JWT / auth
-JWT_SECRET_KEY=replace-with-secure-secret
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRES_MINUTES=60
-OAUTH2_TOKEN_URL=/api/v1/auth/token
+# Stripe
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
-# Referral Bonuses (in SOM)
-REFERRAL_REGISTERED_BONUS_SOM=25
-REFERRAL_ACTIVATED_BONUS_SOM=50
-REFERRAL_ACTIVATED_INVITER_BONUS_SOM=100
+# Email (SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_FROM=noreply@harmoniapi.com
 
-# Admin Credentials (default admin created on first startup if no admins exist)
-ADMIN_PHONE=+996700000000
-ADMIN_PASSWORD=admin123
-ADMIN_USERNAME=admin
+# Telegram
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_CHAT_ID=your_chat_id
 
-# Multi-tenant configuration
-# Default PC club ID for dev/testing (optional, leave empty for production)
-# Gizmo credentials are now stored per-club in the database (pc_clubs table)
-# DEFAULT_PC_CLUB_ID=00000000-0000-0000-0000-000000000000
+# CORS
+CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
 
-# Gizmo PC management system integration - Global settings
-# Note: Gizmo API credentials (URL, username, password, user group ID) are now
-# configured per-club in the database (pc_clubs table). Only global timeout,
-# retry, and feature flags are configured here.
-GIZMO_TIMEOUT_SECONDS=30
-GIZMO_MAX_RETRIES=3
-
-# Gizmo Balance Synchronization
-# Payment method ID from Gizmo for deposit transactions (optional, leave unset to use default)
-# GIZMO_DEFAULT_PAYMENT_METHOD_ID=1
-# Operator ID for automated deposits (0 = system/automated, default: 0)
-GIZMO_DEPOSIT_OPERATOR_ID=0
-# Enable/disable balance sync with Gizmo (emergency killswitch, default: true)
-GIZMO_BALANCE_SYNC_ENABLED=true
-# Balance mismatch threshold that triggers WARNING log during reconciliation (in KGS, default: 1.00)
-GIZMO_BALANCE_MISMATCH_THRESHOLD_WARNING=1.00
-# Balance mismatch threshold that triggers CRITICAL log during reconciliation (in KGS, default: 10.00)
-GIZMO_BALANCE_MISMATCH_THRESHOLD_CRITICAL=10.00
-
-# --- PC Booking System - Default Settings (used only for new clubs) ----
-# These values are used ONLY when creating new clubs. After creation, each
-# club has fully independent settings in the database (club_booking_settings table).
-# Clubs can customize their own pricing, limits, and cancellation policies via API.
-
-# Default Hourly Pricing (for new clubs)
-BOOKING_DEFAULT_HOURLY_RATE_SOM=100
-# Note: minute_rate calculated automatically as hourly_rate / 60
-
-# Default Booking Limits (for new clubs)
-BOOKING_DEFAULT_MIN_DURATION_MINUTES=15
-BOOKING_DEFAULT_MAX_DURATION_MINUTES=1440  # 24 hours
-BOOKING_DEFAULT_MAX_ADVANCE_DAYS=7
-BOOKING_DEFAULT_MAX_CONCURRENT_PCS=5
-
-# Default Cancellation Policy (for new clubs)
-BOOKING_DEFAULT_CANCELLATION_ENABLED=true
-BOOKING_DEFAULT_CANCELLATION_MIN_HOURS_BEFORE=2  # Cancel 2+ hours before start
-BOOKING_DEFAULT_CANCELLATION_REFUND_PERCENTAGE=80  # 80% refund if on time
-
-# Default Global Packages (created on first run, then assignable to clubs)
-BOOKING_DEFAULT_PACKAGES_JSON=[{"name":"3 часа","duration_minutes":180},{"name":"6 часов","duration_minutes":360},{"name":"12 часов","duration_minutes":720}]
-
-
+# Admin
+FIRST_ADMIN_EMAIL=admin@test.com
+FIRST_ADMIN_PASSWORD=change-me-in-production
