--- a/alembic.ini
+++ b/alembic.ini
@@ -59,7 +59,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+# sqlalchemy.url is loaded from environment variable DATABASE_URL in alembic/env.py
+# Do not set it here - use .env file instead
 
 
 [post_write_hooks]
