--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     "aiosmtplib>=5.0.0",
     "alembic>=1.17.1",
+    "asyncio>=4.0.0",
     "asyncpg>=0.30.0",
     "email-validator>=2.3.0",
     "fastapi>=0.121.0",
+    "greenlet>=3.2.4",
     "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
+    "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.2.1",
