feat: add tariff and file management modules
Implement tariff management system with file upload capabilities. Add new API endpoints for managing tariffs and associated PDF files.

- Add Tariff and TariffFile models with database schema
- Implement file upload service with size limits and validation
- Add tariff CRUD operations with filtering and pagination
- Configure upload directory settings (max default value is 10MB per file)
- Add database migration for new tables
- Archive completed admin-auth proposal specs

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,7 @@ CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
 # Admin
 FIRST_ADMIN_EMAIL=admin@test.com
 FIRST_ADMIN_PASSWORD=change-me-in-production
+
+# File Upload
+UPLOAD_DIR=uploads
+MAX_UPLOAD_SIZE_MB=10
