--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi>=0.121.0",
     "greenlet>=3.2.4",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.4",
