feat(calculator): add calorie calculator module with BMR/TDEE calculations
Introduces personalized calorie calculation engine using the Mifflin-St Jeor formula.
Users can input biometric data (gender, age, weight, height) and activity level to
receive daily calorie recommendations based on their fitness goal (weight loss,
maintenance, muscle gain). The calculator automatically recommends matching tariff
plans based on calculated calorie requirements.

- BMR calculation: Mifflin-St Jeor formula (1990)
- TDEE calculation: BMR × activity level multiplier
- Goal-based adjustments: configurable surplus/deficit values
- POST /api/calculator/calculate endpoint with full validation
- Tariff recommendation: matches closest calorie profile
- Configuration: age, weight, height constraints with safe defaults

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,13 @@ FIRST_ADMIN_PASSWORD=change-me-in-production
 # File Upload
 UPLOAD_DIR=uploads
 MAX_UPLOAD_SIZE_MB=10
+
+# Calculator
+CALCULATOR_CALORIE_DEFICIT=500
+CALCULATOR_CALORIE_SURPLUS=300
+CALCULATOR_MIN_AGE=15
+CALCULATOR_MAX_AGE=120
+CALCULATOR_MIN_WEIGHT_KG=30
+CALCULATOR_MAX_WEIGHT_KG=300
+CALCULATOR_MIN_HEIGHT_CM=100
+CALCULATOR_MAX_HEIGHT_CM=250
