feat(api): add stripe payment processing with email verification
Implement complete payment flow with email-based user verification and Stripe
integration. Users can verify their email, purchase tariff plans, and receive
PDF materials automatically upon successful payment.

MODULES ADDED:
- auth: Email verification with 6-digit OTP codes (10min TTL, rate limiting)
- payment: Stripe PaymentIntent creation and webhook processing
- users: Minimal user management (name, surname, email)

SERVICES ADDED:
- resend: Email delivery adapter for verification codes and payment notifications
- stripe: Payment processing adapter with webhook signature verification

DATABASE CHANGES:
- Add users table (name, surname, email, is_verified)
- Add email_verifications table (email, code, expires_at, attempts)
- Add payments table (stripe_payment_intent_id, user_id, tariff_id, amount, status, metadata)
- Migration: alembic/versions/3516fa16368a_auto_20251110191629.py

ENDPOINTS ADDED:
- POST /api/auth/send-verification-code - Send 6-digit code to email
- POST /api/auth/verify-code - Verify code and create user account
- POST /api/stripe/payment-intent - Create Stripe PaymentIntent for tariff purchase
- POST /api/stripe/webhook - Handle Stripe payment events (success/failure)
- GET /api/stripe/payment/{payment_id}/status - Check payment status
- GET /api/users/{user_id} - Get user by ID (admin)
- GET /api/users/email/{email} - Get user by email (admin)
- PATCH /api/users/{user_id} - Update user (admin)
- DELETE /api/users/{user_id} - Delete user (admin)

CONFIGURATION:
- Migrate from SMTP to Resend API for email delivery
- Add Stripe API keys (secret, public, webhook secret)
- Add configurable email templates (success/failure notifications)
- Add verification settings (TTL, rate limits, max attempts)

PAYMENT FLOW:
1. User enters name, surname, email on checkout page
2. System sends 6-digit verification code via email
3. User enters code to verify email ownership
4. System creates Stripe 

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
+# Resend
+RESEND_API_KEY=re_your_resend_api_key
+RESEND_FROM_EMAIL=onboarding@harmoni.com
+
 # CORS
 CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
 
@@ -38,3 +42,15 @@ CALCULATOR_MIN_WEIGHT_KG=30
 CALCULATOR_MAX_WEIGHT_KG=300
 CALCULATOR_MIN_HEIGHT_CM=100
 CALCULATOR_MAX_HEIGHT_CM=250
+
+# Email Verification
+VERIFICATION_CODE_TTL_MINUTES=10
+VERIFICATION_CODE_LENGTH=6
+VERIFICATION_RATE_LIMIT_SECONDS=60
+VERIFICATION_MAX_ATTEMPTS=5
+
+# Payment Email Templates
+PAYMENT_SUCCESS_EMAIL_SUBJECT="Payment Successful - {tariff_name}"
+PAYMENT_SUCCESS_EMAIL_BODY="Hello {name},\n\nYour payment for {tariff_name} was successful!\nAmount: {amount} {currency}\n\nYour materials are attached to this email.\n\nThank you for choosing Harmoni!"
+PAYMENT_FAILURE_EMAIL_SUBJECT="Payment Failed - {tariff_name}"
+PAYMENT_FAILURE_EMAIL_BODY="Hello {name},\n\nUnfortunately, your payment for {tariff_name} was not successful.\nReason: {reason}\n\nPlease try again or contact support if you need assistance.\n\nBest regards,\nHarmoni Team"
