--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "python-telegram-bot>=22.5",
+    "resend>=2.19.0",
     "rich>=14.2.0",
     "sqlalchemy[asyncio]>=2.0.0",
     "stripe>=13.2.0",
