feat: change language and new naming to KatBalance

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Application
-APP_NAME=HarmoniAPI
+APP_NAME=KatBalanceAPI
 APP_VERSION=0.1.0
 DEBUG=false
 
 # Database
-# For local PostgreSQL: postgresql+asyncpg://postgres:postgres@localhost:5432/harmoni
+# For local PostgreSQL: postgresql+asyncpg://postgres:postgres@localhost:5432/katbalance
 # For remote: postgresql+asyncpg://user:password@host:port/database
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/harmoni
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/katbalance
 
 # Security
 SECRET_KEY=your-secret-key-change-in-production
@@ -20,7 +20,7 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # Resend
 RESEND_API_KEY=re_your_resend_api_key
-RESEND_FROM_EMAIL=onboarding@harmoni.com
+RESEND_FROM_EMAIL=onboarding@katbalance.com
 
 # CORS
 CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
@@ -51,6 +51,6 @@ VERIFICATION_MAX_ATTEMPTS=5
 
 # Payment Email Templates
 PAYMENT_SUCCESS_EMAIL_SUBJECT="Payment Successful - {tariff_name}"
-PAYMENT_SUCCESS_EMAIL_BODY="Hello {name},\n\nYour payment for {tariff_name} was successful!\nAmount: {amount} {currency}\n\nYour materials are attached to this email.\n\nThank you for choosing Harmoni!"
+PAYMENT_SUCCESS_EMAIL_BODY="Hello {name},\n\nYour payment for {tariff_name} was successful!\nAmount: {amount} {currency}\n\nYour materials are attached to this email.\n\nThank you for choosing KatBalance!"
 PAYMENT_FAILURE_EMAIL_SUBJECT="Payment Failed - {tariff_name}"
-PAYMENT_FAILURE_EMAIL_BODY="Hello {name},\n\nUnfortunately, your payment for {tariff_name} was not successful.\nReason: {reason}\n\nPlease try again or contact support if you need assistance.\n\nBest regards,\nHarmoni Team"
+PAYMENT_FAILURE_EMAIL_BODY="Hello {name},\n\nUnfortunately, your payment for {tariff_name} was not successful.\nReason: {reason}\n\nPlease try again or contact support if you need assistance.\n\nBest regards,\nKatBalance Team"
